完善 页面布局，修改路由的判断

--- a/app/css/addJobInformation.css
+++ b/app/css/addJobInformation.css
@@ -1,6 +1,8 @@
 /*addJobInformation.css  新增添加就业信息*/
 .addJobInformation{
     width: 1040px;
+    height: 640px;
+    overflow: auto;
     margin: 0 auto;
 }
 .addJobInformation-top{
