--- a/app/css/manageClassroom.css
+++ b/app/css/manageClassroom.css
@@ -5,7 +5,7 @@
 }
 .manageClassroom-left{
     width: 120px;
-    height: 640px;
+    height: 680px;
     border-right: 1px solid #080808;
     background-color: #c3d0d9;
     float: left;
@@ -37,4 +37,8 @@
     height: 640px;
     float: left;
     margin-left: 30px;
+}
+.activeBackgroundColor{
+    background-color: #1d2b36;
+    color: #c3d0d9;
 }
