--- a/app/css/navRole.css
+++ b/app/css/navRole.css
@@ -20,7 +20,7 @@
 
 }
 .chartList ul li{
-    height: 40px;
+    /*height: 40px;*/
     line-height: 40px;
     text-align: center;
     cursor: pointer;
